--- a/app/assets/aas_demo/partials/collection.html
+++ b/app/assets/aas_demo/partials/collection.html
@@ -64,7 +64,7 @@
           <td>{{file.chunked_status}}</td>
           <td>
             {{file.s3_copy_status}}
-            <span class="fa fa-refresh fa-spin" ng-if="file.s3_copy_status == 'copying'"></span>
+            <span class="fa fa-refresh fa-spin icon-refresh icon-spin" ng-if="file.s3_copy_status == 'copying'"></span>
           </td>
           <td>{{file.bytes | bytes}}</td>
           <td><a href='' ng-if="collection.upload_status == 'ready'" ng-click='removeFile(file)'>remove</a></td>
